Feature/match service (#8)
* Added Match Provider and tests

* Updated Summoner service and tests

* Updated IT

* Updated transformer test
