# src/main/java/com/fp/tft/rest/SummonerController.java
@@ -2,10 +2,13 @@ package com.fp.tft.rest;
 
 import com.fp.tft.api.SummonerApi;
 import com.fp.tft.api.models.Summoner;
+import com.fp.tft.api.models.SummonerMatches;
 import com.fp.tft.service.SummonerService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
+
+import javax.validation.Valid;
 
 @Controller
 @RequiredArgsConstructor
@@ -16,5 +19,10 @@ public class SummonerController implements SummonerApi {
     @Override
     public ResponseEntity<Summoner> getSummonerByName(String username) {
         return ResponseEntity.ok(summonerService.getSummonerByName(username));
+    }
+
+    @Override
+    public ResponseEntity<SummonerMatches> getMatchesBySummonerName(String summonerName, @Valid Integer count) {
+        return ResponseEntity.ok(summonerService.getSummonerMatchesByName(summonerName, count));
     }
 }
